--- a/src/TinyMessenger/TinyMessenger/TinyMessenger.nuspec
+++ b/src/TinyMessenger/TinyMessenger/TinyMessenger.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>TinyMessenger</id>
-    <version>1.0.3</version>
+    <version>1.0.5</version>
     <title>TinyMessenger</title>
     <authors>Steven Robbins</authors>
     <owners>Steven Robbins</owners>
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A simple messenger/event aggregator.</description>
     <releaseNotes>
-      Customised Version
+      Customised Version - Defaults to Strong References
     </releaseNotes>
     <copyright>Copyright Steven Robbins 2015</copyright>
     <tags>Certegy CCP</tags>
